syntax = "proto3";

package change_stream;

option go_package = "kasho/proto;proto";

service ChangeStream {
  // Stream returns a stream of changes after the given LSN
  rpc Stream(StreamRequest) returns (stream Change) {}
  
  // Bootstrap coordination methods
  rpc StartBootstrap(StartBootstrapRequest) returns (BootstrapResponse) {}
  rpc CompleteBootstrap(CompleteBootstrapRequest) returns (BootstrapResponse) {}
  rpc GetStatus(GetStatusRequest) returns (StatusResponse) {}
}

message StreamRequest {
  string last_position = 1;
}

message Change {
  string position = 1;
  string type = 2;
  oneof data {
    DMLData dml = 3;
    DDLData ddl = 4;
  }
}

message ColumnValue {
  oneof value {
    string string_value = 1;
    int64 int_value = 2;
    double float_value = 3;
    bool bool_value = 4;
    string timestamp_value = 5;  // ISO 8601 format
  }
}

message DMLData {
  string table = 1;
  repeated string column_names = 2;
  repeated ColumnValue column_values = 3;
  string kind = 4;
  OldKeys old_keys = 5;
}

message OldKeys {
  repeated string key_names = 1;
  repeated ColumnValue key_values = 2;
}

message DDLData {
  int32 id = 1;
  string time = 2;
  string username = 3;
  string database = 4;
  string ddl = 5;
}

// Bootstrap coordination messages
message StartBootstrapRequest {
  string start_position = 1;
  string snapshot_name = 2;
}

message CompleteBootstrapRequest {}

message GetStatusRequest {}

message BootstrapResponse {
  string status = 1;
  string previous_state = 2;
  string current_state = 3;
  int64 accumulated_changes = 4;
  bool ready_to_stream = 5;
}

message StatusResponse {
  string state = 1;
  string start_position = 2;
  string current_position = 3;
  int64 accumulated_changes = 4;
  int32 connected_clients = 5;
  int64 uptime_seconds = 6;
} 